# electricity-co2-emission-simgrid

./: README.md  Sujet.txt
OtherTestFiles/: host_energy.cpp  system.xml
OtherTestFiles/Sujet_19-1/: README.md
OtherTestFiles/Untested/: host_emission4.cpp  host_energy.cpp  host_energy.h
exemples/cpp/conso-exec/: s4u-conso-exec.tesh
exemples/cpp/emission-exec/: s4u-emission-exec.cpp  s4u-emission-exec.tesh
simgrid/: MANIFEST.in
simgrid/Sujet_19-1/s4u-emission-exec1/: CMakeLists.txt  README.md
simgrid/Sujet_19-1/s4u-emission-exec1/ressources/: AR_2024_monthly.csv  BE_2024_hourly.csv  BH_2024_daily.csv
simgrid/Sujet_19-1/s4u-emission-exec1/ressources/exports/: .~lock.emission_MyHost1_Belgium.csv#  emission_MyHost1_Argentina.csv  emission_MyHost1_Bahrain.csv  emission_MyHost1_Belgium.csv  emission_MyHost1_France.csv  emission_MyHost1_New Zealand.csv  emission_MyHost1_No data.csv  emission_MyHost2_Bahrain.csv  emission_MyHost2_France.csv  emission_MyHost2_No data.csv  emission_MyHost3_Bahrain.csv  emission_MyHost3_France.csv  emission_MyHost3_No data.csv  emission_MyHost4_New Zealand.csv
simgrid/Sujet_19-1/s4u-emission-exec1/src/: emission_platform.xml  s4u-emission-exec1.cpp
simgrid/exemples/: CMakeLists.txt
simgrid/exemples/cpp/: CMakeLists.txt
simgrid/tools/: DefinePackages.cmake
src/: Unsaved Document 1
src/Sujet_19-1/s4u-emission-exec1/: CMakeLists.txt
src/Sujet_19-1/s4u-emission-exec1/src/: s4u-emission-exec1.cpp
src/Untested/: FR_2024_monthly.csv  ReadMe.txt  emission.h  host_emission.cpp  host_emission.hpp  host_emission2.cpp  host_emission3.cpp  host_energy.cpp  main4.cpp
(+11 files in other folders)
